--- a/hemsida/webb.html
+++ b/hemsida/webb.html
@@ -22,7 +22,7 @@
 
 
     <div class="toolbar">
-        <p>wexterås</p>
+        <h2>wexterås</h2>
         <!-- <p>världens bästa växthus</p> -->
 
     </div>
