--- a/hemsida/index.html
+++ b/hemsida/index.html
@@ -56,18 +56,19 @@
                 res.split("\n").forEach(function (item, index) {
                     data = item.split(",")
                     if (data[0]) {
-                        xdata.push(data[1])
+                        let date = new Date(parseInt(data[1]))
+                        console.log(date)
+                        xdata.push(`${date.getHours()}:${date.getMinutes()}:${date.getSeconds()}`)
                         ydata.push(data[0])
                     }
                 })
 
                 console.log(ydata)
-                date = new Date(xdata)
 
                 new Chart("tempGraph", {
                     type: "line",
                     data: {
-                        labels: date,
+                        labels: xdata,
                         datasets: [{
                             fill: false,
                             lineTension: 0,
@@ -93,7 +94,9 @@
                 res.split("\n").forEach(function (item, index) {
                     data = item.split(",")
                     if (data[0]) {
-                        xdata.push(data[1])
+                        let date = new Date(parseInt(data[1]))
+                        console.log(date)
+                        xdata.push(`${date.getHours()}:${date.getMinutes()}:${date.getSeconds()}`)
                         ydata.push(data[0])
                     }
                 })
